--- a/app/views/users/_user_posts_new_form.html.erb
+++ b/app/views/users/_user_posts_new_form.html.erb
@@ -41,7 +41,7 @@
     <%= f.label :status %>
 
     <!-- Input for status start -->
-    <%= f.text_field :status, class: "form-control" %>
+    <%= f.select :status, options_for_select(Post.statuses.keys), {}, class: "form-control" %>
     <!-- Input for status end -->
   </div>
   <!-- Label and input for status end -->
