--- a/app/views/users/_card.html.erb
+++ b/app/views/users/_card.html.erb
@@ -8,6 +8,9 @@
       <dt>Name</dt>
       <dd><%= user.name %></dd>
 
+      <dt>Email</dt>
+      <dd><%= user.email %></dd>
+
     </dl>
 
     <div class="row">
