--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,5 +23,27 @@
       <% end %>
     <% end %>
   </div>
+  <div class="form-group">
+    <% email_class = "form-control" %>
+    <% email_was_invalid = user.errors.include?(:email) %>
+
+    <% if was_validated %>
+      <% if email_was_invalid %>
+        <% email_class << " is-invalid" %>
+      <% else %>
+        <% email_class << " is-valid" %>
+      <% end %>
+    <% end %>
+
+    <%= f.label :email %>
+    <%= f.text_field :email, class: email_class, placeholder: "Enter email" %>
+    <% if email_was_invalid %>
+      <% user.errors.full_messages_for(:email).each do |message| %>
+        <div class="invalid-feedback d-flex">
+          <%= message %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
   <%= f.button class: "btn btn-outline-secondary btn-block" %>
 <% end %>
