--- a/app/views/users/_users_search_form.html.erb
+++ b/app/views/users/_users_search_form.html.erb
@@ -7,6 +7,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :email_cont, "Email contains" %>
+    <%= f.text_field :email_cont, :class => "form-control", :placeholder => "Email contains" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :created_at, "Created at" %>
     <div class="row">
       <div class='col-md-6 mb-1'>
