--- a/app/views/post_tags/_post_tags_search_form.html.erb
+++ b/app/views/post_tags/_post_tags_search_form.html.erb
@@ -83,44 +83,9 @@
   </script>
 
   <div class="form-group">
-    <%= f.label :created_at, "Tag Created at" %>
-    <div class="row">
-      <div class='col-md-6 mb-1'>
-        <div class='input-group date' id='taggteqcreated_atPicker' data-target-input="nearest">
-          <%= f.text_field :tag_created_at_gteq, :class => "form-control datetimepicker-input", :placeholder => "Tag Created at greater than or equal to", :data => {:target => '#taggteqcreated_atPicker'} %>
-          <div class="input-group-append" data-target='#taggteqcreated_atPicker' data-toggle="datetimepicker">
-            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-          </div>
-        </div>
-      </div>
-
-      <div class='col-md-6'>
-        <div class='input-group date' id='taglteqcreated_atPicker' data-target-input="nearest">
-          <%= f.text_field :tag_created_at_lteq, :class => "form-control datetimepicker-input", :placeholder => "Tag Created at less than or equal to", :data => {:target => '#taglteqcreated_atPicker'} %>
-          <div class="input-group-append" data-target='#taglteqcreated_atPicker' data-toggle="datetimepicker">
-            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= f.label :tag_name_cont, "Tag name contains" %>
+    <%= f.text_field :tag_name_cont, :class => "form-control", :placeholder => "Tag name contains" %>
   </div>
-  <script type="text/javascript">
-      $(function () {
-          $('#taggteqcreated_atPicker').datetimepicker({
-              format: 'YYYY-MM-DD hh:mm:SS'
-          });
-          $('#taglteqcreated_atPicker').datetimepicker({
-              useCurrent: false,
-              format: 'YYYY-MM-DD hh:mm:SS'
-          });
-          $('#taggteqcreated_atPicker').on("dp.change", function (e) {
-              $('#taglteqcreated_atPicker').data("DateTimePicker").minDate(e.date);
-          });
-          $('#taglteqcreated_atPicker').on("dp.change", function (e) {
-              $('#taggteqcreated_atPicker').data("DateTimePicker").maxDate(e.date);
-          });
-      });
-  </script>
 
 
   <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
