--- a/app/views/posts/_posts_search_form.html.erb
+++ b/app/views/posts/_posts_search_form.html.erb
@@ -97,6 +97,11 @@
     <%= f.text_field :user_name_cont, :class => "form-control", :placeholder => "User name contains" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :tags_name_cont, "Tag name contains" %>
+    <%= f.text_field :tags_name_cont, :class => "form-control", :placeholder => "Tag name contains" %>
+  </div>
+
 
   <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
