--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,3 +9,9 @@
     <%= render partial: "posts/post_post_tags" %>
   </div>
 </div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "posts/post_tags" %>
+  </div>
+</div>
