--- a/app/views/tags/_card.html.erb
+++ b/app/views/tags/_card.html.erb
@@ -5,6 +5,9 @@
 
   <div class="card-body">
     <dl class="mb-1">
+      <dt>Name</dt>
+      <dd><%= tag.name %></dd>
+
     </dl>
 
     <div class="row">
