--- a/app/views/tags/_tags_search_form.html.erb
+++ b/app/views/tags/_tags_search_form.html.erb
@@ -2,6 +2,11 @@
   <p class="lead">Narrow results:</p>
 
   <div class="form-group">
+    <%= f.label :name_cont, "Name contains" %>
+    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :created_at, "Created at" %>
     <div class="row">
       <div class='col-md-6 mb-1'>
@@ -42,6 +47,45 @@
   </script>
 
 
+  <div class="form-group">
+    <%= f.label :published_at, "Post Published at" %>
+    <div class="row">
+      <div class='col-md-6 mb-1'>
+        <div class='input-group date' id='postsgteqpublished_atPicker' data-target-input="nearest">
+          <%= f.text_field :posts_published_at_gteq, :class => "form-control datetimepicker-input", :placeholder => "Post Published at greater than or equal to", :data => {:target => '#postsgteqpublished_atPicker'} %>
+          <div class="input-group-append" data-target='#postsgteqpublished_atPicker' data-toggle="datetimepicker">
+            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+          </div>
+        </div>
+      </div>
+
+      <div class='col-md-6'>
+        <div class='input-group date' id='postslteqpublished_atPicker' data-target-input="nearest">
+          <%= f.text_field :posts_published_at_lteq, :class => "form-control datetimepicker-input", :placeholder => "Post Published at less than or equal to", :data => {:target => '#postslteqpublished_atPicker'} %>
+          <div class="input-group-append" data-target='#postslteqpublished_atPicker' data-toggle="datetimepicker">
+            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript">
+      $(function () {
+          $('#postsgteqpublished_atPicker').datetimepicker({
+              format: 'YYYY-MM-DD hh:mm:SS'
+          });
+          $('#postslteqpublished_atPicker').datetimepicker({
+              useCurrent: false,
+              format: 'YYYY-MM-DD hh:mm:SS'
+          });
+          $('#postsgteqpublished_atPicker').on("dp.change", function (e) {
+              $('#postslteqpublished_atPicker').data("DateTimePicker").minDate(e.date);
+          });
+          $('#postslteqpublished_atPicker').on("dp.change", function (e) {
+              $('#postsgteqpublished_atPicker').data("DateTimePicker").maxDate(e.date);
+          });
+      });
+  </script>
 
 
   <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
