--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -9,3 +9,9 @@
     <%= render partial: "tags/tag_post_tags" %>
   </div>
 </div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "tags/tag_posts" %>
+  </div>
+</div>
